🌐feat:更改term.html实现支持中文tags显示

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -22,7 +22,7 @@
 <ul class="terms-tags">
     {{- $type := .Type }}
     {{- range $key, $value := .Data.Terms.Alphabetical }}
-    {{- $name := .Name }}
+    {{- $name := .PlainName }}
     {{- $count := .Count }}
     {{- with $.Site.GetPage (printf "/%s/%s" $type $name) }}
     <li>
